--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="236dp"
         android:onClick="donutClick"
         android:text="Order Donuts"
-        app:layout_constraintEnd_toStartOf="@+id/orderButton"
+        app:layout_constraintEnd_toStartOf="@+id/coffeeButton"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
