Adding donuts to list

--- a/app/src/main/res/layout/activity_current_order.xml
+++ b/app/src/main/res/layout/activity_current_order.xml
@@ -6,4 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".CurrentOrderActivity">
 
+    <ListView
+        android:id="@+id/itemList"
+        android:layout_width="413dp"
+        android:layout_height="473dp"
+        android:layout_marginTop="256dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/remove_from_cart"
+        tools:layout_editor_absoluteX="30dp"
+        tools:layout_editor_absoluteY="65dp" />
+
+    <Button
+        android:id="@+id/removeItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/place_order"
+        tools:layout_editor_absoluteX="30dp"
+        tools:layout_editor_absoluteY="154dp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/subtotal"
+        tools:layout_editor_absoluteX="260dp"
+        tools:layout_editor_absoluteY="125dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/zero_subtotal"
+        tools:layout_editor_absoluteX="336dp"
+        tools:layout_editor_absoluteY="125dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
