--- a/app/src/main/res/layout/activity_coffee.xml
+++ b/app/src/main/res/layout/activity_coffee.xml
@@ -9,22 +9,16 @@
     tools:context=".CoffeeActivity">
 
 
-    -
-
-    -
-
-
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="163dp"
         android:layout_height="240dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintHorizontal_bias="0.274"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/coffeecup" />
-
 
     <RadioGroup
         android:id="@+id/sizeGroup"
@@ -39,7 +33,7 @@
             android:id="@+id/shortRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="toggleAddIns"
+            android:onClick="toggleOptions"
             android:text="Short"
             android:textSize="18sp" />
 
@@ -47,7 +41,7 @@
             android:id="@+id/tallRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="toggleAddIns"
+            android:onClick="toggleOptions"
             android:text="Tall"
             android:textSize="18sp" />
 
@@ -55,7 +49,7 @@
             android:id="@+id/grandeRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="toggleAddIns"
+            android:onClick="toggleOptions"
             android:text="Grande"
             android:textSize="18sp" />
 
@@ -63,7 +57,7 @@
             android:id="@+id/ventiRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="toggleAddIns"
+            android:onClick="toggleOptions"
             android:text="Venti"
             android:textSize="18sp" />
 
@@ -78,7 +72,8 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="addCoffeeToOrder"/>
 
     <LinearLayout
         android:id="@+id/linearLayout3"
@@ -103,7 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="100px"
                 android:layout_weight="3"
-                android:onClick="toggleAddIns"
+                android:onClick="toggleOptions"
                 android:text="@string/caramel"
                 android:textSize="18sp" />
 
@@ -112,7 +107,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="100px"
                 android:layout_weight="3"
-                android:onClick="toggleAddIns"
+                android:onClick="toggleOptions"
                 android:text="Cream"
                 android:textSize="18sp" />
 
@@ -121,7 +116,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="100px"
                 android:layout_weight="3"
-                android:onClick="toggleAddIns"
+                android:onClick="toggleOptions"
                 android:text="Milk"
                 android:textSize="18sp" />
 
@@ -130,7 +125,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="100px"
                 android:layout_weight="3"
-                android:onClick="toggleAddIns"
+                android:onClick="toggleOptions"
                 android:text="Syrup"
                 android:textSize="18sp" />
 
@@ -139,7 +134,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="100px"
                 android:layout_weight="3"
-                android:onClick="toggleAddIns"
+                android:onClick="toggleOptions"
                 android:text="Whip Cream"
                 android:textSize="18sp" />
         </LinearLayout>
@@ -154,7 +149,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="152px"
                 android:layout_weight="3"
-                tools:srcCompat="@mipmap/caramel" />
+                app:srcCompat="@mipmap/caramel" />
 
             <ImageView
                 android:id="@+id/imageView7"
@@ -168,7 +163,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="152px"
                 android:layout_weight="3"
-                tools:srcCompat="@mipmap/milk" />
+                app:srcCompat="@mipmap/milk" />
 
             <ImageView
                 android:id="@+id/imageView6"
@@ -189,13 +184,14 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/subtotalValue"
+        android:id="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="28dp"
         android:text="@string/subtotal"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.723"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -206,8 +202,36 @@
         android:entries="@array/coffeeQuant"
         app:layout_constraintBottom_toTopOf="@+id/addToOrder"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintVertical_bias="0.548"
+
+        />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="57dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="124dp"
+        android:text="@string/quantity_label"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/spinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+
+    <TextView
+        android:id="@+id/subtotalValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="28dp"
+        android:text="@string/zero_subtotal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
