--- a/app/src/main/res/layout/activity_current_order.xml
+++ b/app/src/main/res/layout/activity_current_order.xml
@@ -9,7 +9,7 @@
     <ListView
         android:id="@+id/itemList"
         android:layout_width="415dp"
-        android:layout_height="376dp"
+        android:layout_height="235dp"
         android:layout_marginTop="356dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,8 @@
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintHorizontal_bias="0.223"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="removeFromOrder"/>
 
     <Button
         android:id="@+id/removeItem"
@@ -42,21 +43,75 @@
         android:id="@+id/textView2"
         android:layout_width="55dp"
         android:layout_height="21dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="112dp"
         android:text="@string/subtotal"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.921"
+        app:layout_constraintEnd_toStartOf="@+id/orderSubTotal"
+        app:layout_constraintHorizontal_bias="0.922"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView6"
+        android:layout_width="55dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="112dp"
+        android:text="@string/subtotal"
+        app:layout_constraintEnd_toStartOf="@+id/orderSubTotal"
+        app:layout_constraintHorizontal_bias="0.922"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/orderSubTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="32dp"
         android:text="@string/zero_subtotal"
         app:layout_constraintBottom_toBottomOf="@+id/removeItem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.649" />
+        app:layout_constraintVertical_bias="0.586" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="266dp"
+        android:layout_marginTop="10dp"
+        android:text="Tax"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/taxValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="55dp"
+        android:layout_marginEnd="31dp"
+        android:text="@string/zero_subtotal"
+        app:layout_constraintBottom_toTopOf="@+id/totalValue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/orderSubTotal"
+        app:layout_constraintVertical_bias="0.428" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="48dp"
+        android:text="Total"
+        app:layout_constraintEnd_toStartOf="@+id/totalValue"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <TextView
+        android:id="@+id/totalValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="159dp"
+        android:text="@string/zero_subtotal"
+        app:layout_constraintBottom_toTopOf="@+id/itemList"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
