--- a/app/src/main/res/layout/activity_current_order.xml
+++ b/app/src/main/res/layout/activity_current_order.xml
@@ -37,7 +37,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintVertical_bias="0.256" />
+        app:layout_constraintVertical_bias="0.256"
+        android:onClick="placeOrder"/>
 
     <TextView
         android:id="@+id/textView2"
