--- a/app/src/main/res/layout/activity_coffee.xml
+++ b/app/src/main/res/layout/activity_coffee.xml
@@ -6,6 +6,9 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/coffeewallp"
+    android:backgroundTint="#632B2B2B"
+    android:backgroundTintMode="src_over"
     tools:context=".CoffeeActivity">
 
 
@@ -24,7 +27,7 @@
         android:id="@+id/sizeGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="126dp"
+        android:layout_marginTop="90dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="parent">
@@ -35,6 +38,7 @@
             android:layout_height="wrap_content"
             android:onClick="toggleOptions"
             android:text="Short"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <RadioButton
@@ -43,6 +47,7 @@
             android:layout_height="wrap_content"
             android:onClick="toggleOptions"
             android:text="Tall"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <RadioButton
@@ -51,6 +56,7 @@
             android:layout_height="wrap_content"
             android:onClick="toggleOptions"
             android:text="Grande"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <RadioButton
@@ -59,27 +65,29 @@
             android:layout_height="wrap_content"
             android:onClick="toggleOptions"
             android:text="Venti"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
     </RadioGroup>
 
     <Button
         android:id="@+id/addToOrder"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
+        android:background="@drawable/rounded_corner"
+        android:onClick="addCoffeeToOrder"
         android:text="Add to Order"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:onClick="addCoffeeToOrder"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="276dp"
         android:layout_height="226dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="128dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/addToOrder"
@@ -100,6 +108,7 @@
                 android:layout_weight="3"
                 android:onClick="toggleOptions"
                 android:text="@string/caramel"
+                android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
             <CheckBox
@@ -109,6 +118,7 @@
                 android:layout_weight="3"
                 android:onClick="toggleOptions"
                 android:text="Cream"
+                android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
             <CheckBox
@@ -118,6 +128,7 @@
                 android:layout_weight="3"
                 android:onClick="toggleOptions"
                 android:text="Milk"
+                android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
             <CheckBox
@@ -127,6 +138,7 @@
                 android:layout_weight="3"
                 android:onClick="toggleOptions"
                 android:text="Syrup"
+                android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
             <CheckBox
@@ -136,6 +148,7 @@
                 android:layout_weight="3"
                 android:onClick="toggleOptions"
                 android:text="Whip Cream"
+                android:textColor="@android:color/white"
                 android:textSize="18sp" />
         </LinearLayout>
 
@@ -183,55 +196,57 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/label"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="@string/subtotal"
-        android:textSize="18sp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/sizeGroup"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.723"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Spinner
-        android:id="@+id/spinner"
+        <TextView
+            android:id="@+id/label"
+            android:layout_width="84dp"
+            android:layout_height="wrap_content"
+            android:text="@string/subtotal"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/subtotalValue"
+            android:layout_width="81dp"
+            android:layout_height="wrap_content"
+            android:text="@string/zero_subtotal"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:entries="@array/coffeeQuant"
+        android:layout_marginBottom="32dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/addToOrder"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        app:layout_constraintVertical_bias="0.548"
+        app:layout_constraintStart_toStartOf="parent">
 
-        />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/quantity_label"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            tools:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="57dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="124dp"
-        android:text="@string/quantity_label"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/spinner"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/coffeeQuant"
 
-    <TextView
-        android:id="@+id/subtotalValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="28dp"
-        android:text="@string/zero_subtotal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
