--- a/app/src/main/res/layout/activity_coffee.xml
+++ b/app/src/main/res/layout/activity_coffee.xml
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="toggleOptions"
-            android:text="Short"
+            android:text="@string/short_size"
             android:textColor="@android:color/white"
             android:textSize="18sp" />
 
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="toggleOptions"
-            android:text="Tall"
+            android:text="@string/tall_size"
             android:textColor="@android:color/white"
             android:textSize="18sp" />
 
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="toggleOptions"
-            android:text="Grande"
+            android:text="@string/grande_size"
             android:textColor="@android:color/white"
             android:textSize="18sp" />
 
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="toggleOptions"
-            android:text="Venti"
+            android:text="@string/venti_size"
             android:textColor="@android:color/white"
             android:textSize="18sp" />
 
@@ -77,7 +77,7 @@
         android:layout_marginBottom="24dp"
         android:background="@drawable/rounded_corner"
         android:onClick="addCoffeeToOrder"
-        android:text="Add to Order"
+        android:text="@string/add_to_order"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +104,7 @@
             <CheckBox
                 android:id="@+id/caramelBox"
                 android:layout_width="wrap_content"
-                android:layout_height="100px"
+                android:layout_height="40dp"
                 android:layout_weight="3"
                 android:onClick="toggleOptions"
                 android:text="@string/caramel"
@@ -114,40 +114,40 @@
             <CheckBox
                 android:id="@+id/creamBox"
                 android:layout_width="wrap_content"
-                android:layout_height="100px"
+                android:layout_height="40dp"
                 android:layout_weight="3"
                 android:onClick="toggleOptions"
-                android:text="Cream"
+                android:text="@string/cream"
                 android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
             <CheckBox
                 android:id="@+id/milkBox"
                 android:layout_width="wrap_content"
-                android:layout_height="100px"
+                android:layout_height="40dp"
                 android:layout_weight="3"
                 android:onClick="toggleOptions"
-                android:text="Milk"
+                android:text="@string/milk"
                 android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
             <CheckBox
                 android:id="@+id/syrupBox"
                 android:layout_width="wrap_content"
-                android:layout_height="100px"
+                android:layout_height="40dp"
                 android:layout_weight="3"
                 android:onClick="toggleOptions"
-                android:text="Syrup"
+                android:text="@string/syrup"
                 android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
             <CheckBox
                 android:id="@+id/whipCreamBox"
                 android:layout_width="wrap_content"
-                android:layout_height="100px"
+                android:layout_height="40dp"
                 android:layout_weight="3"
                 android:onClick="toggleOptions"
-                android:text="Whip Cream"
+                android:text="@string/whipped_cream"
                 android:textColor="@android:color/white"
                 android:textSize="18sp" />
         </LinearLayout>
@@ -160,35 +160,35 @@
             <ImageView
                 android:id="@+id/imageView9"
                 android:layout_width="match_parent"
-                android:layout_height="152px"
+                android:layout_height="70dp"
                 android:layout_weight="3"
                 app:srcCompat="@mipmap/caramel" />
 
             <ImageView
                 android:id="@+id/imageView7"
                 android:layout_width="match_parent"
-                android:layout_height="152px"
+                android:layout_height="70dp"
                 android:layout_weight="3"
                 app:srcCompat="@mipmap/cream" />
 
             <ImageView
                 android:id="@+id/imageView8"
                 android:layout_width="match_parent"
-                android:layout_height="152px"
+                android:layout_height="70dp"
                 android:layout_weight="3"
                 app:srcCompat="@mipmap/milk" />
 
             <ImageView
                 android:id="@+id/imageView6"
                 android:layout_width="match_parent"
-                android:layout_height="152px"
+                android:layout_height="68dp"
                 android:layout_weight="3"
                 app:srcCompat="@mipmap/syrup" />
 
             <ImageView
                 android:id="@+id/imageView10"
                 android:layout_width="match_parent"
-                android:layout_height="152px"
+                android:layout_height="70dp"
                 android:layout_weight="3"
                 app:srcCompat="@mipmap/whipped_cream" />
 
